main/default/objects/Capacity__c/Capacity__c.object-meta.xml
<CustomObject>
    <label>Capacity</label>
    <nameField>
        <label>Capacity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Capacities</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>