main/default/objects/Capacity__c/fields/Binding_Authority_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Binding_Authority_Agreement__c</fullName>
    <label>Binding Authority Agreement</label>
    <referenceTo>Binding_Authority_Agreement__c</referenceTo>
    <relationshipLabel>Capacities</relationshipLabel>
    <relationshipName>Capacities</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>