main/default/objects/Capacity__c/fields/Percentage_Share__c.field-meta.xml
<CustomField>
    <fullName>Percentage_Share__c</fullName>
    <label>Percentage Share</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>